BookModel updated with more properties, Swagger doc updated
