# apis/models/book.model.js
@@ -5,13 +5,47 @@ var mongoose = require('mongoose');
 // Schema from mongoose
 var Schema = mongoose.Schema;
 
+// Book genre schema
+var bookGenreSchema = new Schema({
+    name: {
+        type: String,
+        required: true
+    }
+});
+
 // Use Schema to create our own Book Schema
 var bookSchema = new Schema({
-    isbn: String,
-    title : String,
-    description : String,
-    quantity : Number,
-    author: String
+    isbn: {
+        type: String,
+        required: true
+    },
+    title : {
+        type: String,
+        required: true
+    },
+    description : {
+        type: String,
+        default: ''
+    },
+    quantity : {
+        type: Number,
+        required: true
+    },
+    author: {
+        type: String,
+        required: true,
+        lowercase: true
+    },
+    frontCover: String,
+    backCover: String,
+    language: {
+        type: String,
+        lowercase: true,
+        default: 'english'
+    },
+    genre: {
+        type: [bookGenreSchema]
+    }
 });
 
 // Create a model('BookModel') to our defined Schema and export it outside
